css/tutorial.css
#tab2, #tab3 {
    position: fixed;
}

.seller-tutorial_menu > a,
.seller-tutorial_menu #tab2:target ~ a:nth-of-type(1),
.seller-tutorial_menu #tab3:target ~ a:nth-of-type(1) {
    padding: 20px;
    border: 1px solid #aaa;
    margin-left: 20%;
}

.seller-tutorial_menu #tab1:target {
    box-shadow: inset 0 3px 0 0 #1cbed2;
    border-top: 1px solid #1cbed2;
}

.seller-tutorial_menu > a:nth-of-type(2),
.seller-tutorial_menu > a:nth-of-type(3) {
    margin-left: -5px;
}

.seller-tutorial_menu > div {
    padding: 5px;
    border: none;
    margin-top: 65px;
}

.seller-tutorial_link {
    line-height: 28px;
    background: #fff;
    text-decoration: none;
    font-size: 19px;
    font-weight: 400;
    color: #777676;
}

.seller-tutorial_icon {
    margin-top: -8px;
    margin-right: 10px;
}

#tab2,
#tab3,
.seller-tutorial_menu > div,
.seller-tutorial_menu #tab2:target ~ div:nth-of-type(1),
.seller-tutorial_menu #tab3:target ~ div:nth-of-type(1) {
    display: none;
}

.seller-tutorial_menu > div:nth-of-type(1),
.seller-tutorial_menu #tab2:target ~ div:nth-of-type(2),
.seller-tutorial_menu #tab3:target ~ div:nth-of-type(3) {
    display: block;
    border-bottom: 1px solid #aaa;
}

.seller-tutorial_menu > a:nth-of-type(1),
.seller-tutorial_menu #tab2:target ~ a:nth-of-type(2),
.seller-tutorial_menu #tab3:target ~ a:nth-of-type(3) {
    border-bottom: 2px solid #fff;
}

.seller-tutorial_menu #tab1:target ~ a:first-of-type,
.seller-tutorial_menu #tab2:target ~ a:nth-of-type(2),
.seller-tutorial_menu #tab3:target ~ a:nth-of-type(3) {
    box-shadow: inset 0 3px 0 0 #1cbed2;
    border-top: 1px solid #1cbed2;
}

.seller-tutorial_line {
    margin-top: 16px;
    border: 0;
    border-top: 1px solid #aaa;
}

.seller-tutorial_heading {
    margin-bottom: 65px;
    text-align: center;
    font-size: 30px;
}

.seller-tutorial_block1,
.seller-tutorial_block2,
.seller-tutorial_block3 {
    float: left;
    width: 100%;
}

.seller-tutorial_blockleft {
    margin-left: 15%;
    width: 35%;
    float: left;
}

.seller-tutorial_blockright {
    padding-left: 60px;
    width: 50%;
    float: left;
}

.seller-tutorial_list {
    list-style-type: square;
    padding-bottom: 60px;
}

.seller-tutorial_square {
    color: black;
    margin-left: 22px;
}

.seller-tutorial_item {
    color: #817d7d;
}

.seller-tutorial_bgimage {
    background-image: url("../images/sell_collor.jpg");
    max-width: 100%;
    height: 252px;
    margin-top: 20px;
    margin-bottom: 55px;
}

.seller-tutorial__proposal-item {
    text-decoration: underline;
    line-height: 24px;
    font-size: 16px;
    font-weight: 300;
    padding-left: 90px;
}

.seller-tutorial__proposal-item > a {
    color: #817d7d
}

.seller-tutorial__proposal-item:hover,
.seller-tutorial__proposal-item:focus,
.seller-tutorial__proposal-item:active {
    text-decoration: none;
}

.seller-tutorial__button {
    display: block;
    color: #fff;
    font-size: 1.25em;
    text-align: left;
    cursor: pointer;
    margin: auto;
    text-transform: uppercase;
    -webkit-transition: .5s ease;
    transition: .5s ease;
    margin-bottom: 15px;
    margin-top: 55px;
}

.seller-tutorial__under-button {
    font-size: 17px;
    font-weight: 300;
    line-height: 26px;
    text-align: center;
    margin-bottom: 60px;
}

.seller-tutorial__request {
    text-align: center;
    font-size: 16px;
    font-weight: 300;
    line-height: 24px;
    margin-bottom: 20px;
}

.seller-tutorial_subheading {
    font-size: 23px;
    font-weight: 400;
    color: #817d7d;
    padding-bottom: 10px;
}

.seller-tutorial_text {
    font-size: 16px;
    font-weight: 300;
    color: #817d7d;
    padding-bottom: 45px;
}

.seller-tutorial_undermenu {
    font-size: 21px;
    font-weight: 400;
    color: black;
    padding-bottom: 20px;
}

.seller-tutorial_item {
    font-size: 16px;
    font-weight: 300;
    line-height: 24px;
}

.seller-tutorial_sequence {
    position: relative;
    margin-bottom: 35px;
}

.seller-tutorial_rightheading {
    font-size: 23px;
    font-weight: 400;
    color: #817d7d;
    padding-bottom: 10px;
}

.seller-tutorial_rightheading:before{
    position: absolute;
    font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
    width: 42px;
    height: 42px;
    background: #1cbed2;
    line-height: 42px;
    font-size: 52px;
    font-weight: 300;
    color: #fff;
    text-align: center;
}

.rightheading_number1:before {
    content: '1';
    top: 0;
    left: -60px;
}

.rightheading_number2:before {
     content: '2';
     top: 0;
     left: -60px;
 }

.rightheading_number3:before {
    content: '3';
    top: 0;
    left: -60px;
}

.rightheading_number4:before {
    content: '4';
    top: 0;
    left: -60px;
}

.seller-tutorial_righttext {
    font-size: 16px;
    font-weight: 300;
    color: #817d7d;
    line-height: 25px;
}

